tests/ui/opts/15_duplicate_param_different_attrs.stderr
error: duplicate parameter
 --> tests/ui/opts/15_duplicate_param_different_attrs.rs:5:18
  |
5 | #[funcmap(params(T))]
  |                  ^
