tests/ui/opts/15_duplicate_param_different_attrs.rs
use funcmap::FuncMap;

#[derive(FuncMap)]
#[funcmap(params(T))]
#[funcmap(params(T))]
struct Test<T>(T);

fn main() {}
